--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "tsc",
     "ci": "pnpm run lint && pnpm run build",
-    "release": "pnpm run lint && pnpm run build && pnpm changeset"
+    "release": "pnpm run lint && pnpm run build && pnpm changeset publish"
   },
   "repository": {
     "type": "git",
