--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "esModuleInterop": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
+      "noEmit": true,
       "moduleResolution": "node16"
     },
     "include": ["src"]
